# simple-chess

./: .travis.yml  CMakeLists.txt  CMakeLists.txt.boost.in  README
client/: playclient.cpp  serverplayer.cpp  serverplayer.h
engine/: aiplayer.cpp  aiplayer.h  asyncaiplayer.cpp  asyncaiplayer.h  asyncgame.cpp  asyncgame.h  asyncplayer.h  cache.h  chessboard.cpp  chessboard.h  chessplayer.h  config.cpp  config.h  consoleopponent.cpp  consoleopponent.h  global.cpp  global.h  humanplayer.cpp  humanplayer.h  perfomancemeasurement.h  playchamp.cpp  playchamp.h  playchess.cpp  tests.cpp  tests.h  timeout.cpp  timeout.h
examples/: ai_vs_ai.cpp  ai_vs_ai_async.cpp  ai_vs_human.cpp
network_common/: message.cpp  message.h  protocol.cpp  protocol.h  resultstable.cpp  resultstable.h
server/: client.cpp  client.h  clientmanager.cpp  clientmanager.h  clientplayer.cpp  clientplayer.h  match.h  playserver.cpp
tests/: tests.cpp
